Fix page title format

--- a/_includes/world/head.html
+++ b/_includes/world/head.html
@@ -19,7 +19,7 @@
 {% assign url = page.url  | absolute_url %}
 
 <head>
-  <title>{{ site.world_title }} &mdash; {% if page.title %}{{ page.title }}{% else %}{{ site.description }}{% endif %}</title>
+  <title>{{ site.world_title }} &mdash; {% if page.title %}{{ page.title }}{% else %}{{ page.description }}{% endif %}</title>
   <meta charset="utf-8" />
   <meta content="ie=edge" http-equiv="x-ua-compatible" />
   <meta name="handheldfriendly" content="true" />
