--- a/_sass/world/modules/_faq.scss
+++ b/_sass/world/modules/_faq.scss
@@ -13,7 +13,7 @@
 
     li {
       flex: 0 0 auto;
-      padding-bottom: var(--space-small);
+      padding: var(--space-small) var(--space-x-small);
       border-bottom: var(--border-white);
 
       a {
