replace font variation settings with variables

--- a/_sass/world/base/_body.scss
+++ b/_sass/world/base/_body.scss
@@ -1,6 +1,6 @@
 html {
   font-family: "acumin-variable",sans-serif;
-  font-variation-settings: 'wght' 700, 'wdth' 100, 'slnt' -12;
+  font-variation-settings: var(--font-weight-700);
 }
 
 body {
