--- a/_sass/world/modules/_hero.scss
+++ b/_sass/world/modules/_hero.scss
@@ -33,7 +33,7 @@
       width: 120px;
       min-height: 4em;
       padding: var(--space-small);
-      font-variation-settings: 'wght' 600, 'wdth' 100, 'slnt' -12;
+      font-variation-settings: var(---font-weight-600);
       border-radius: 50%;
       position: absolute;
       line-height: 1.2;
