--- a/_sass/world/modules/_footer.scss
+++ b/_sass/world/modules/_footer.scss
@@ -4,8 +4,8 @@ footer {
   border-top: var(--border-white);
 
   /* Extra small devices (phones, 600px and down) */
-  @media only screen and (max-width: 600px) {
-    padding: var(--space-x-small) 0 var(--space-small);
+  @media only screen and (max-width: 1200px) {
+    padding: var(--space-small);
   }
 
   a {
@@ -23,7 +23,7 @@ footer {
     border-right: var(--border-white);
     margin: 0;
 
-    @media only screen and (max-width: 600px) {
+    @media only screen and (max-width: 1200px) {
       padding: 0;
       border: none;
     }
