--- a/_sass/world/base/_typography.scss
+++ b/_sass/world/base/_typography.scss
@@ -4,6 +4,7 @@
   --font-weight-600: 'wght' 600, 'wdth' 100, 'slnt' -12;
   --font-weight-500: 'wght' 500, 'wdth' 100, 'slnt' -12;
   --font-weight-400: 'wght' 400, 'wdth' 100, 'slnt' -12;
+  --font-weight-400-normal: 'wght' 400, 'wdth' 100, 'slnt' 0;
 }
 
 h1 {
@@ -71,4 +72,12 @@ p {
     font-size: var(--type-small);
     font-variation-settings: var(--font-weight-400);
   }
+}
+
+strong {
+  font-weight: 800;
+}
+
+em {
+  font-style: italic;
 }
