add copy to homepage

--- a/_sass/world/modules/_sponsors.scss
+++ b/_sass/world/modules/_sponsors.scss
@@ -1,10 +1,14 @@
 .sponsors {
+  max-width: 50em;
+  margin: auto;
+
   &__logos {
     display: flex;
     justify-content: center;
     align-items: center;
     margin: auto;
     max-width: 40em;
+    padding-bottom: var(--space-large);
 
     &--small {
       flex-wrap: wrap;
