--- a/assets/css/world.scss
+++ b/assets/css/world.scss
@@ -24,3 +24,4 @@
 @import 'world/modules/speaker_carousel';
 @import 'world/modules/speakers';
 @import 'world/modules/sponsors';
+@import 'world/modules/sponsorship';
