--- a/_sass/world/common/_button.scss
+++ b/_sass/world/common/_button.scss
@@ -10,6 +10,10 @@
   &--light {
     background-color: var(--purple-medium);
   }
+
+  &--red {
+    background-color: var(--red);
+  }
 }
 
 .tito-widget-button {
