--- a/_sass/world/modules/_callout.scss
+++ b/_sass/world/modules/_callout.scss
@@ -6,21 +6,45 @@
     background-color: var(--pink-pale);
     margin-bottom: var(--space-medium);
 
+    h2 {
+      color: var(--purple-dark);
+      width: 60%;
+      padding: var(--space-medium);
+
+      /* Extra small devices (phones, 600px and down) */
+      @media only screen and (max-width: 600px) {
+        padding: 0;
+        font-size: var(--type-medium);
+      }
+    }
+
     flex-container {
       padding: var(--space-medium) var(--space-small);
       gap: var(--space-small);
       border-top: var(--border-red);
       border-bottom: var(--border-red);
+      align-items: center;
     }
 
     bordered-container {
       --border-margin: var(--space-medium);
       --border-padding: var(--space-medium);
+
+      /* Extra small devices (phones, 600px and down) */
+      @media only screen and (max-width: 600px) {
+        --border-margin: var(--space-small);
+        --border-padding: var(--space-small);
+      }
     }
 
     p {
       color: var(--red);
       line-height: 1.5em;
+    }
+
+    button {
+      font-style: italic;
+      font-weight: 700;
     }
   }
 
