--- a/_includes/world/footer.html
+++ b/_includes/world/footer.html
@@ -3,6 +3,10 @@
     <p>This website was created by <a href="https://www.linkedin.com/in/shona-chan/">Shona Chan</a>, a junior developer from the Rails community.<br>
     It was commissioned by the Rails Foundation, designed by <a href="https://katya-sitko.netlify.app/">Katya Sitko</a> and created under the mentorship of <a href="https://radioactivetoy.tech">Ayush Newatia</a>.</p>
     <ul>
+      <li><a href="https://twitter.com/rails"></a></li>
+      <li><a href="https://www.linkedin.com/company/ruby-on-rails-org/"></a></li>
+    </ul>
+    <ul>
       <li><a href="#">Code of Conduct</a></li>
       <li><a href="#">Privacy Policy</a></li>
       <li><a href="#">Terms & Conditions</a></li>
