--- a/_sass/world/base/_typography.scss
+++ b/_sass/world/base/_typography.scss
@@ -66,6 +66,7 @@ h6 {
 
 p {
   line-height: 150%;
+  font-variation-settings: var(--font-weight-600);
 
   /* Extra small devices (phones, 600px and down) */
   @media only screen and (max-width: 600px) {
