Add footer social icons

--- a/_includes/world/footer.html
+++ b/_includes/world/footer.html
@@ -1,10 +1,23 @@
 <footer>
   <bordered-container>
-    <p>This website was created by <a href="https://www.linkedin.com/in/shona-chan/">Shona Chan</a>, a junior developer from the Rails community.<br>
-    It was commissioned by the Rails Foundation, designed by <a href="https://katya-sitko.netlify.app/">Katya Sitko</a> and created under the mentorship of <a href="https://radioactivetoy.tech">Ayush Newatia</a>.</p>
+    <p>
+      This website was created by <a href="https://www.linkedin.com/in/shona-chan/">Shona Chan</a>, a junior developer from the Rails community.
+      <br>
+      It was commissioned by the Rails Foundation, designed by <a href="https://katya-sitko.netlify.app/">Katya Sitko</a> and created under the mentorship of <a href="https://radioactivetoy.tech">Ayush Newatia</a>.
+    </p>
+    <br>
+
     <ul>
-      <li><a href="https://twitter.com/rails"></a></li>
-      <li><a href="https://www.linkedin.com/company/ruby-on-rails-org/"></a></li>
+      <li>
+        <a href="https://twitter.com/rails">
+          {% include world/icons/twitter.html %}
+        </a>
+      </li>
+      <li>
+        <a href="https://www.linkedin.com/company/ruby-on-rails-org/">
+          {% include world/icons/linkedin.html %}
+        </a>
+      </li>
     </ul>
     <ul>
       <li><a href="#">Code of Conduct</a></li>
