Chance fous selector to focus outline

--- a/_sass/world/base/_body.scss
+++ b/_sass/world/base/_body.scss
@@ -40,7 +40,7 @@ summary::-webkit-details-marker {
   display: none;
 }
 
-:focus {
+:focus-visible {
   outline: 2px solid blue;
   outline-offset: 5px;
 }
