Add aria labels to social links

--- a/_includes/world/footer.html
+++ b/_includes/world/footer.html
@@ -9,12 +9,12 @@
 
     <ul>
       <li>
-        <a href="https://twitter.com/rails">
+        <a href="https://twitter.com/rails" aria-label="Rails on Twitter">
           {% include world/icons/twitter.html %}
         </a>
       </li>
       <li>
-        <a href="https://www.linkedin.com/company/ruby-on-rails-org/">
+        <a href="https://www.linkedin.com/company/ruby-on-rails-org/" aria-label="Rails on LinkedIn">
           {% include world/icons/linkedin.html %}
         </a>
       </li>
