Change ul tag to menu

--- a/_sass/world/modules/_faq.scss
+++ b/_sass/world/modules/_faq.scss
@@ -9,7 +9,7 @@
     padding-bottom: var(--space-small);
   }
 
-  ul.tabs {
+  menu.tabs {
     display: flex;
     font-size: var(--type-large);
     margin-bottom: var(--space-medium);
