--- a/assets/css/world.scss
+++ b/assets/css/world.scss
@@ -25,3 +25,4 @@
 @import 'world/modules/speakers';
 @import 'world/modules/sponsors';
 @import 'world/modules/sponsorship';
+@import 'world/modules/back_to_top';
