--- a/_includes/world/head.html
+++ b/_includes/world/head.html
@@ -57,6 +57,8 @@
   </script>
   <script defer data-domain="rubyonrails.org" src="https://plausible.io/js/script.js"></script>
   <script src="https://js.tito.io/v2" async></script>
+  <script src="/assets/scripts/back_to_top.js" defer></script>
+
   <link rel="icon" href="/assets/images/favicon.ico" />
   <link rel="apple-touch-icon" type="image/png" href="/assets/images/apple-touch-icon.png" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.4.0/dist/themes/light.css" />
