--- a/_sass/world/base/_colours.scss
+++ b/_sass/world/base/_colours.scss
@@ -3,6 +3,7 @@
   --purple-pale: #F3EDFF;
   --purple-medium: #A386FF;
   --purple-dark: #3B1D62;
+  --purple-dark-translucent: #3B1D6288;
   --orange:  #D96242;
   --orange-red: #F9553A;
   --pink-pale: #F8DBDB;;
