--- a/_sass/world/modules/_callout.scss
+++ b/_sass/world/modules/_callout.scss
@@ -8,8 +8,6 @@
 
     h3 {
       color: var(--purple-dark);
-      width: 60%;
-      padding: var(--space-medium);
       font-size: var(--type-xx-large);
 
       /* Extra small devices (phones, 600px and down) */
@@ -21,10 +19,26 @@
 
     flex-container {
       padding: var(--space-medium) var(--space-small);
-      gap: var(--space-small);
+      gap: var(--space-medium);
       border-top: var(--border-red);
       border-bottom: var(--border-red);
       align-items: center;
+      justify-content: center;
+      width: 100%;
+      box-sizing: border-box;
+
+      > h3 {
+        text-align: center;
+      }
+
+      > .callout__description p {
+        max-width: 35em;
+      }
+
+      @media only screen and (max-width: 900px) {
+        flex-direction: column;
+        text-align: center;
+      }
     }
 
     bordered-container {
