--- a/_sass/world/modules/_about.scss
+++ b/_sass/world/modules/_about.scss
@@ -1,5 +1,5 @@
 .about {
-  padding: var(--space-small);
+  padding: var(--space-medium) var(--space-small);
   line-height: 90%;
   border-top: var(--border-white);
   border-bottom: var(--border-white);
