--- a/_includes/world/footer.html
+++ b/_includes/world/footer.html
@@ -1,28 +1,28 @@
 <footer>
   <bordered-container>
     <p>
-      This website was created by <a href="https://www.linkedin.com/in/shona-chan/">Shona Chan</a>, a junior developer from the Rails community.
+      This website was created by <a href="https://www.linkedin.com/in/shona-chan/" target="_blank">Shona Chan</a>, a junior developer from the Rails community.
       <br>
-      It was commissioned by the Rails Foundation, designed by <a href="https://katya-sitko.netlify.app/">Katya Sitko</a> and created under the mentorship of <a href="https://radioactivetoy.tech">Ayush Newatia</a>.
+      It was commissioned by the Rails Foundation, designed by <a href="https://katya-sitko.netlify.app/" target="_blank">Katya Sitko</a> and created under the mentorship of <a href="https://radioactivetoy.tech">Ayush Newatia</a>.
     </p>
     <br>
 
     <ul>
       <li>
-        <a href="https://twitter.com/rails" aria-label="Rails on Twitter">
+        <a href="https://twitter.com/rails" aria-label="Rails on Twitter" target="_blank">
           {% include world/icons/twitter.html %}
         </a>
       </li>
       <li>
-        <a href="https://www.linkedin.com/company/ruby-on-rails-org/" aria-label="Rails on LinkedIn">
+        <a href="https://www.linkedin.com/company/ruby-on-rails-org/" aria-label="Rails on LinkedIn" target="_blank">
           {% include world/icons/linkedin.html %}
         </a>
       </li>
     </ul>
     <ul>
-      <li><a href="#">Code of Conduct</a></li>
-      <li><a href="#">Privacy Policy</a></li>
-      <li><a href="#">Terms & Conditions</a></li>
+      <li><a href="/world/conduct">Code of Conduct</a></li>
+      <li><a href="https://rubyonrails.org/foundation/privacy" target="_blank">Privacy Policy</a></li>
+      <li><a href="/world/terms">Terms & Conditions</a></li>
     </ul>
   </bordered-container>
 </footer>
