--- a/assets/css/world.scss
+++ b/assets/css/world.scss
@@ -19,6 +19,7 @@
 @import 'world/modules/hero';
 @import 'world/modules/faq';
 @import 'world/modules/header';
+@import 'world/modules/legal';
 @import 'world/modules/speaker';
 @import 'world/modules/speaker_card';
 @import 'world/modules/speaker_carousel';
