Add new opengraph image

--- a/_includes/world/head.html
+++ b/_includes/world/head.html
@@ -13,7 +13,7 @@
 {% if page.og_image %}
   {% assign image = page.og_image | absolute_url %}
 {% else %}
-  {% assign image = '/assets/images/opengraph-world.png' | absolute_url %}
+  {% assign image = '/assets/world/opengraph.png' | absolute_url %}
 {% endif %}
 
 {% assign url = page.url  | absolute_url %}
