--- a/_sass/world/modules/_header.scss
+++ b/_sass/world/modules/_header.scss
@@ -18,8 +18,8 @@
     margin: auto;
   }
 
-  &__logo:hover {
-    transform: none;
+  &__logo:hover, &__link:hover {
+    transform: none !important;
   }
 
   ul {
