--- a/_sass/world/base/_body.scss
+++ b/_sass/world/base/_body.scss
@@ -40,13 +40,9 @@ summary::-webkit-details-marker {
   display: none;
 }
 
-:focus-visible {
-  outline: 2px solid blue;
-  outline-offset: 5px;
-}
-
-sl-carousel:focus {
-  outline: none;
+:focus {
+  outline-color: var(--purple-medium);
+  outline-offset: 2px;
 }
 
 .skip-navigation {
