--- a/_layouts/world/default.html
+++ b/_layouts/world/default.html
@@ -18,7 +18,7 @@
     <back-to-top>
       <button>
         {% include world/icons/back-to-top.html %}
-        <span>Back to Top</span>
+        <span>Back to top</span>
       </button>
     </back-to-top>
   </body>
