Rotate faq chevron

--- a/_sass/world/modules/_faq.scss
+++ b/_sass/world/modules/_faq.scss
@@ -68,6 +68,13 @@
               height: calc(1em + 0.5vw);
               width: auto;
               margin-left: var(--space-small);
+              transition: transform 0.2s linear;
+            }
+          }
+
+          &[open] {
+            summary svg {
+              transform: rotate(180deg);
             }
           }
         }
