--- a/_sass/world/modules/_legal.scss
+++ b/_sass/world/modules/_legal.scss
@@ -17,23 +17,53 @@
     font-size: var(--type-x-small);
   }
 
+  > p {
+    margin-left: var(--space-large);
+
+    /* Extra small devices (phones, 600px and down) */
+    @media only screen and (max-width: 600px) {
+      margin-left: var(--space-medium)
+    }
+  }
+
   a {
     text-decoration: underline;
   }
 
   ul {
     list-style-type: disc;
+    margin-left: var(--space-large);
+
+    /* Extra small devices (phones, 600px and down) */
+    @media only screen and (max-width: 600px) {
+      margin-left: var(--space-medium)
+    }
 
     li::marker {
-      font-size: var(--type-x-small);
+      font-size: var(--type-xx-small);
+    }
+  }
+
+  p + ul {
+    margin-left: var(--space-x-large);
+
+    /* Extra small devices (phones, 600px and down) */
+    @media only screen and (max-width: 600px) {
+      margin-left: var(--space-large)
     }
   }
 
   ol {
     list-style-type: lower-alpha;
+    margin-left: var(--space-large);
+
+    /* Extra small devices (phones, 600px and down) */
+    @media only screen and (max-width: 600px) {
+      margin-left: var(--space-medium)
+    }
 
     li::marker {
-      font-size: var(--type-x-small);
+      font-size: var(--type-xx-small);
       font-variation-settings: var(--font-weight-400-normal);
       font-family: inherit;
     }
