Add aria label to back to top button

--- a/_layouts/world/default.html
+++ b/_layouts/world/default.html
@@ -16,7 +16,7 @@
     {% include world/footer.html %}
 
     <back-to-top>
-      <button>
+      <button aria-label="Back to top">
         {% include world/icons/back-to-top.html %}
         <span>Back to top</span>
       </button>
