--- a/_includes/world/speaker-card.html
+++ b/_includes/world/speaker-card.html
@@ -1,10 +1,12 @@
 <speaker-card>
   <bordered-container>
     <div class="speaker-card__content">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT1cHJ-VgGh9t686MqHvbO0ZQiREiEveXe-98z9aOI&s" alt="{{ speaker.first_name }}'s Avatar" loading="lazy">
-      <h3>{{ speaker.first_name }} {{ speaker.last_name }}</h3>
-      <p>{{ speaker.role }}</p>
-      <p>{{ speaker.company }}</p>
+      <img src="{{ speaker.image_path }}" alt="{{ speaker.first_name }}'s Avatar" loading="lazy">
+      <div class="speaker-card__text">
+        <h3>{{ speaker.first_name }} {{ speaker.last_name }}</h3>
+        <p>{{ speaker.role }}</p>
+        <p>{{ speaker.company }}</p>
+      </div>
     </div>
   </bordered-container>
 </speaker-card>
