--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,7 +1,7 @@
 <div class="banner text--align-center">
   <p>
     <a class="common-button--text" href="/world">
-      Join us for the first Rails World this October in Amsterdam. Tickets on sale soon.
+      The first Rails World is now sold out. See you October 5 & 6 in Amsterdam.
     </a>
   </p>
 </div>
