--- a/_includes/world/header.html
+++ b/_includes/world/header.html
@@ -11,7 +11,7 @@
       {% endif %}
 
       <li><a href="/world/faq" class="nav__link">FAQs</a></li>
-      <li><tito-button event="rails-world/rails-world-2023"></tito-button></li>
+      <li><tito-button event="rails-world/rails-world-2023">Sold out</tito-button></li>
     </ul>
   </nav>
 </header>
