--- a/_sass/world/base/_typography.scss
+++ b/_sass/world/base/_typography.scss
@@ -5,6 +5,7 @@
   --font-weight-500: 'wght' 500, 'wdth' 100, 'slnt' -12;
   --font-weight-400: 'wght' 400, 'wdth' 100, 'slnt' -12;
   --font-weight-400-normal: 'wght' 400, 'wdth' 100, 'slnt' 0;
+  --font-weight-700-normal: 'wght' 700, 'wdth' 100, 'slnt' 0;
 }
 
 h1 {
