--- a/_sass/world/base/_colours.scss
+++ b/_sass/world/base/_colours.scss
@@ -6,6 +6,7 @@
   --purple-dark-translucent: #3B1D6288;
   --orange:  #D96242;
   --orange-red: #F9553A;
+  --orange-brown: rgba(249, 85, 58, 0.58);
   --pink-pale: #F8DBDB;;
   --white: #FFFFFF;
 
