--- a/assets/css/world.scss
+++ b/assets/css/world.scss
@@ -20,6 +20,7 @@
 @import 'world/modules/faq';
 @import 'world/modules/header';
 @import 'world/modules/legal';
+@import 'world/modules/session';
 @import 'world/modules/speaker';
 @import 'world/modules/speaker_card';
 @import 'world/modules/speaker_carousel';
