--- a/_sass/world/common/_containers.scss
+++ b/_sass/world/common/_containers.scss
@@ -2,6 +2,14 @@ content-container {
   display: block;
   max-width: 50em;
   margin: var(--space-large) auto;
+  padding-left: var(--space-large);
+  padding-right: var(--space-large);
+
+  /* Extra small devices (phones, 600px and down) */
+  @media only screen and (max-width: 600px) {
+    padding-left: var(--space-small);
+    padding-right: var(--space-small);
+  }
 
   section {
     padding-bottom: var(--space-xx-large);
@@ -19,6 +27,8 @@ content-container {
 
 content-container.large {
   max-width: unset;
+  padding-left: unset;
+  padding-right: unset;
 }
 
 flex-container {
@@ -34,4 +44,23 @@ bordered-container {
   border-right: var(--border-color);
   margin: 0 var(--border-margin);
   padding: var(--border-padding) 0;
+}
+
+breadcrumbs-container {
+  padding-bottom: var(--space-large);
+  display: block;
+
+  ul {
+    display: flex;
+    gap: var(--space-small);
+    flex-wrap: wrap;
+  }
+
+  span {
+    font-variation-settings: var(--font-weight-700-normal);
+  }
+
+  a:hover {
+    transform: none !important;
+  }
 }
