--- a/assets/css/world.scss
+++ b/assets/css/world.scss
@@ -14,6 +14,7 @@
 @import 'world/common/button';
 
 @import 'world/modules/about';
+@import 'world/modules/agenda';
 @import 'world/modules/callout';
 @import 'world/modules/footer';
 @import 'world/modules/hero';
