--- a/_layouts/world/agenda.html
+++ b/_layouts/world/agenda.html
@@ -6,7 +6,9 @@ layout: world/default
   <h1>Agenda</h1>
   <p>Explore two full days of Rails World, featuring keynotes, talks, workshops, sessions and more. (Note: A conference app where you can build and save your schedule will be launched soon.)</p>
 
-  {% include world/agenda/tabs.html current_tab=page.day %}
+  {% include world/agenda/tabs.html %}
+
+  <br>
 
   <small>Schedule is in Central European Summer Time (CEST)</small>
 
