--- a/_includes/world/header.html
+++ b/_includes/world/header.html
@@ -5,10 +5,8 @@
     </a>
     <flex-spacer></flex-spacer>
     <ul>
-      {% if false %}
-        <li><a href="/world/speakers" class="nav__link">Speakers</a></li>
-        <li><a href="#" class="nav__link">Agenda</a></li>
-      {% endif %}
+      <li><a href="/world/speakers" class="nav__link">Speakers</a></li>
+      <li><a href="/world/agenda" class="nav__link">Agenda</a></li>
 
       <li><a href="/world/faq" class="nav__link">FAQs</a></li>
       <li><button class="tito" disabled>Sold out</button></li>
